--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11667295.md#1" target="_blank">遭两官员强奸 湖南12岁女孩反遭调查</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11667295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/002FotoJet-1-150x120.jpg" align ="left"></a>近日，一封《一个父亲的血泪控诉》在网路流传，信中称，其女儿周某某系湖南衡阳祁东县洪桥镇一中的在校学生，今年未满12周，遭当地权贵强奸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 7:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11666031.md#1" target="_blank">中共雇凶烧大纪元印刷厂 胡元辉谴责</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11666031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screenshot_2019-11-19_at_35534_PM@1200x1200-600x400-1-150x120.png" align ="left"></a>11月19日凌晨3点50分，香港大纪元时报印刷厂遭中共雇凶纵火。对此，国立中正大学传播学系教授胡元辉表示，此作法令人不解，是令人痛恨的事情，特别是作为一个非营利组织的媒体，却遭到攻击，是非常大的社会耻辱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 10:55 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11666231.md#1" target="_blank">蔡英文与赖清德正式登记 参选2020正副总统</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11666231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/4363a9ac9baf03f100006708cc51edc4-150x120.jpg" align ="left"></a>中华民国总统蔡英文与副手赖清德19日前往中选会完成选举登记，蔡英文表示，当前香港情势恶化，中共又积极介入台湾选举，“英德配”两人登记参选体现台湾是民主国家，政党可以自由竞争，人民可以自由意志选举自己的总统、副总统。她也强调，中共介入台湾选举是存在的，而且是每天正在发生的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 9:56 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11664681.md#1" target="_blank">央企排黑液 腾格里沙漠现12万平米污染带</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11664681.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111259377925-150x120.jpg" align ="left"></a>宁夏腾格里沙漠再现污染，总面积约12万平方米，系造纸央企前身排出的造纸黑液，地面犹如龟甲，令人触目惊心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 9:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11663034.md#1" target="_blank">澳议员拒中共要求其“悔改”不撤批评言论</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11663034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/20190808-Chi-Jin-Andrew-Hastie-150x120.jpg" align ="left"></a>因对中共独裁政权提出直言不讳的批评而被拒签证，无法前往中国进行考察的自由党联邦议员哈斯提（Andrew Hastie）和参议员帕特森（James Paterson），断然拒绝了北京当局提出的要其“悔改”的要求。他们表示，不会屈从于“外国势力的指示”，不会收回他们对中共的批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11663019.md#1" target="_blank">澳媒调查：中共贿赂开道 缓慢入侵澳洲近邻</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11663019.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/65065b7ccb88f5b0a477d111a8adad09-150x120.jpg" align ="left"></a>澳洲九号电视台近日对中共在澳洲后院——太平洋岛国的扩张和贿赂行为进行了调查。一位前美国海军太平洋舰队情报长官表示，中共对该地区有很大兴趣是因为这里是美国、澳洲和新西兰之间的交通要道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 5:10 AM							</td></tr>
@@ -15,9 +18,14 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11656640.md#1" target="_blank">一周内 美海关抓捕13偷渡入境中国人</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11656640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806040314512109-150x120.jpg" align ="left"></a>11月10日和7日，美国海关与边境保卫局（U.S. Customs and Border Protection，简称CBP）两次发布新闻稿，截获偷渡入境中国人，一共13名中国偷渡者被捕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 6:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654473.md#1" target="_blank">50年来最严重水患 威尼斯世界遗产遭淹</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654473.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/04490663f71192786aa86db9354792b8-150x120.jpg" align ="left"></a>威尼斯遭到五十多年来最严重的水患，学校关闭停课、世界遗产圣马可大教堂受损。威尼斯市长表示这是一场“灾难”，且威尼斯的雨势也尚未停止。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11654178.md#1" target="_blank">加智库：中共威胁成美朝野共识 加国需警觉</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11654178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/9G9A5751-1-150x120.jpg" align ="left"></a>目前，美国共和党和民主党对中共威胁与渗透已经形成共识，但是渥太华智库认为，加拿大对此还没有足够的警觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 3:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653150.md#1" target="_blank">华为手机现“中国台湾”NCC：不得在台贩售</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653150.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/1510140420011664-150x120.jpg" align ="left"></a>日前华为手机遭爆料，手机更新后系统显示会变成“中国台湾”。对此，NCC也在11月12日发函给手机品牌业者，要求在进行审验装置时必须签下切结书，不得在系统中出现“中国台湾”，否则将会撤销验证证明，手机装置也不得在台湾贩售。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653691.md#1" target="_blank">大陆法会心得交流 海外法轮功学员受益匪浅</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/13/n11653691.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-3-minghui-fahui-16-02-150x120.jpg" align ="left"></a>11月4日至11月12日，明慧网编辑部主办的第十六届中国大陆大法弟子修炼心得交流会结束，共计发表39篇大陆法轮功学员的修炼心得交流稿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 5:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654578.md#1" target="_blank">广东12岁女孩校内坠楼 疑因遭老师责骂</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654578.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-880629318-150x120.jpg" align ="left"></a>广东珠海一名12岁女生在校内堕楼身亡，女孩的同学透露，涉事女生因作业没完成而被老师责备，老师表示，如果不好好学习，就将她从班上除名，以零分计算。被骂后少女当场哭了出来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 12:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/20/n11667707.md#1" target="_blank">每日三退声明精选（2019/11/19）</a><br></h3>中共暴行甲天下，戾暴恶行人人骂。
+衣冠禽兽伪君子，香港暴行上演了。
+和平请愿，被抓被打被杀；
+舆论造假，把香港同胞丑化；
+中共暴行，曝光天下。
+香港同胞，英勇可嘉。
+悲愤之余，教师真话。
+退团退队，不被恶党绑架。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11665863.md#1" target="_blank">疑长期受欺凌 上海14岁中学生喝农药身亡</a><br></h3>11月14日，在上海南翔中学借读的14岁河南籍学生卢诗杰喝农药自杀，次日身亡。据他的同学透露，卢诗杰长期被同学欺凌，甚至于他的每一个家人都被欺凌者起了绰号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 4:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/19/n11665161.md#1" target="_blank">每日三退声明精选（2019/11/18）</a><br></h3>中共恶党窃国七十年，对十四亿中国人的谎言洗脑，对各种宗教信仰的残酷迫害有目共睹。最近在全世界众目睽睽下，又对香港人暴力残杀，还撒着弥天大谎。中共邪教不解体，老百姓没有好日子过。摆脱中共、消灭中共是中华儿女的责任。中共是全人类的万恶之源。是地地道道的政教合一的邪教！天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙。我们声明退出中共邪教的一切组织，决.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月19日 11:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/18/n11662461.md#1" target="_blank">每日三退声明精选（2019/11/17）</a><br></h3>力挺香港同胞，大陆人民不全部都是唯利是图的人，很多很多都是有良知的，很多人民都是支持香港同胞争取自由民主的，关于国内媒体的新闻跟下面的评论，都是官方水军的，媒体新闻跟评论根本就不让发表任何反对声音，我们只有在心里默默支持，请外界同胞不要相信大陆的媒体宣传跟评论，大陆千千万万人跟你们站在一起，只是发表不出来，我们爱这个国家，爱这个民族，只是不爱这个邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月18日 11:53 AM							</td></tr>
@@ -28,6 +36,5 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/16/n11659882.md#1" target="_blank">重庆饲养员私自带幼女近距离摸熊猫受处理</a><br></h3>日前，重庆市动物园一名饲养人员未经许可，私自私自带人进入工作区域近距离观看大熊猫幼仔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 4:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/16/n11659775.md#1" target="_blank">川男7000元做结扎手术 4个月后妻怀孕</a><br></h3>四川崇州市一男子在蜀都医院花费7000多元做男性结扎手术，结果其妻子4个月后怀孕，做手术的医院被投诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月16日 2:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/15/n11657048.md#1" target="_blank">每日三退声明精选（2019/11/14）</a><br></h3>在全球关注香港人民捍卫民主自由运动的时刻，我们越来越看清了中共的邪恶。回想到八九六四及镇压法轮功，中共使用的一切镇压手段如出一辙。一个政府，一个政权靠谎言、欺骗等流氓手段镇压正义与良知，这在历史上是绝无仅有的...... 。我们不与邪恶为伍，退出年少时期加入的少先队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月15日 10:16 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/11/14/n11654455.md#1" target="_blank">每日三退声明精选（2019/11/13）</a><br></h3>被中共长期欺骗、高压管控的国民，从未真正地拥有过面包和自由。吃一口饭却要交半口税，透支几代人的积蓄才买得起的房产，70年后却很可能成为中共“国有”。好不容易成了富豪，也得向中共俯首称臣，接受其管控。德利看透了邪党的流氓邪教本质，在此宣誓退出邪党的共青团和少先队组织不给邪党陪葬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月14日 10:59 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
