--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -5,6 +5,7 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank">世界各地景点上 那些中国人的故事</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/313042_medium-150x120.jpg" align ="left"></a>有这样一群信仰“真、善、忍”的人们，他们遍布于世界各地，长年坚守在著名的风景点。他们的信息台、展板、横幅形成一道道独特的“风景点”，吸引了成千上万的大陆游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 10:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/8/n11506549.md#1" target="_blank">每日三退声明精选（2019/09/07）</a><br></h3>步入中壮年，经历了经济高速发展时期，感受了全社会贯穿上下的彻底的腐败与道德急速堕落，而作为微小的个人却完全无能为力，坚持洁身自好都很难。人们都清楚的知道世风日下的根源就是掌控国家的权贵们，是这个建立在歪理邪说基础上的流氓党。因此，我为自己误入其中而愧悔，其党垮亡也将是必然，相信这一天会很快来到。在此本人严正声明：退出中共党团队，做中华儿女，决不做马列子孙。愿.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月08日 11:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/7/n11505103.md#1" target="_blank">每日三退声明精选（2019/09/06）</a><br></h3>当年也是一腔热血，在谎言的鼓动下，信以为入党就是为天地立心，为生民立命，为往圣继绝学，更以为可以为中华奔走，为民请命。结果现实却恶狠狠地拍醒了我的昏梦。也该退出了，今日，2019年9月6日，我声明退党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月07日 12:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/6/n11502788.md#1" target="_blank">每日三退声明精选（2019/09/05）</a><br></h3>那里有共产党，那里就有独裁暴政，那里就有屠杀，就有暴力，就有谎言，特别是对香港“返送中”民众的暴行，在国际舞台上，充分暴露了其凶恶残暴、谎言流氓的邪恶嘴脸。地地道道的邪教万恶之源！我们声明退出中共邪教的一切组织，决不其为伍，支持香港“返送中”。 天灭中共！恢复中华民族敬天信神传统！做中华儿女！不做马列子孙！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月06日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/9/5/n11500047.md#1" target="_blank">每日三退声明精选（2019/09/04）</a><br></h3>听到很多中国百姓维权的新闻，以及很多中共邪党邪恶的整人历史，想想当今中国老百姓生活多不容易，唾弃黑暗腐败无能的中共政府。申明退出中共邪恶的团队组织保平安，顺应天意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 10:29 AM							</td></tr>
@@ -31,6 +32,5 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/7/n11436160.md#1" target="_blank">每日三退声明精选（2019/08/06）</a><br></h3>中共的集体腐败，环境破坏，舆论导向，道德败坏已经把中国引到了崩溃的边缘，在中共的恐怖镇压下，中国人丧失了最基本的人权，法治成了摆设，不灭中共，中国无望。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月07日 11:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/4/n11429169.md#1" target="_blank">每日三退声明精选（2019/08/02）</a><br></h3>我是一名毕业了几年的大学生，现在的生活压力太大了，民不聊生，连工作都不好找，网上舆论监控也很严，但是还是有那么多贪官情妇社会毒瘤，共产党内部就充满了贪污腐败，我爸还是一个书记，我从小耳濡目染也知道了这其中的不为人知的黑暗，在此我退出党、退团，希望早日移民。不再忍受这暗无天日的生活。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月03日 8:32 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/2/n11425261.md#1" target="_blank">每日三退声明精选（2019/08/01）</a><br></h3>我这一辈子谎话说的最多的时候就是我任共产党的党委书纪期间，我早就想退党，但苦于找不到退党网站，今有同学帮我操作，特委托他帮我退党，顺便也退出共青团、少先队组织，抹去兽印。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月02日 11:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/nf3046_4.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/nf3046_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_4.htm">http://www.epochtimes.com/gb/nf3046_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
