--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -19,6 +19,7 @@
 
 目前，越来越多的国家和地区的政府与人民，开始对中共邪恶本质的觉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月13日 9:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank">明真相后 大陆公检法人员抛弃中共</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/2/n11358618.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/image1-150x120.jpeg" align ="left"></a>在澳洲墨尔本，有这样一个团体，他们平和理性、坚忍善良，用20年的时间反抗嗜虐成性的暴政，这个团体就是法轮功。1999年7月20日，中共发动了对信仰“真、善、忍” 的法轮功修炼者的迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月06日 12:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/30/n11417960.md#1" target="_blank">每日三退声明精选（2019/07/29）</a><br></h3>本人在亿丰汽车城买房子，被黑社会性质的公司骗了，同时很多人被骗，政府不作为，官黑勾结，为我们说话的好记者竟然被公安给抓了，这是什么世道！我们到处求告无门，政府腐败透顶。从这件事看清中共黑社会、恐怖治国的手段，退出曾经被骗加入的共青团、少先队。不做邪恶政权的接班人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 11:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/29/n11415712.md#1" target="_blank">每日三退声明精选（2019/07/28）</a><br></h3>大学时期，被迫入党，1.入党申请书并非本人撰写，是由班级支书在本人不知情的情况下撰写并提交。2.入党宣读时本人为醉酒状态并没有完成宣读过程便中途离场。3.即便是1和2两种情况下还是被入了党。之后了解到该党对我华夏民族的摧残，对中国共产党已经达到厌恶至极的程度，在退党无法的情况，今日特此在这里发表声明，以表退出恶党之态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 11:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/27/n11412484.md#1" target="_blank">每日三退声明精选（2019/07/26）</a><br></h3>我是一名退休机关干部，很高兴在外出考察专案过程中，听到三退保平安的事，中共邪党就应了老百姓的话了“见过骗子，但是没见过象中共邪党这样的骗子，见过耍流氓的，没见过中共邪党这样耍流氓的”，眼下香港也乱了，哪里有它，哪里就出事，中共邪党就是流氓就是恶棍，眼下中共邪党就是世界第一贪腐邪党，我听说瑞士银行要对存在那里的中共邪党贪污官员财产曝光，中共邪党的外交部竟然指责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 11:21 AM							</td></tr>
@@ -42,6 +43,5 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/5/n11365891.md#1" target="_blank">每日三退声明精选（2019/07/04）</a><br></h3>我住在福建沿海某县，是个90后，虽然福建沿海在90年代很乱，治安不算好，由于小时候受到的教育，总体上还是觉得共产党好，中小学时期跟着入了少先队和共青团，大学时我还主动入了党。可是今年我去了香港旅游，见到了法轮功大游行，收到了法轮功传单，也触及到了以前只是听说而不能碰的谷歌脸书YouTube等等。并因此看到了不少之前从未看到的黑幕，挑起内战、和平时期各种乱折腾.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月05日 11:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/4/n11363265.md#1" target="_blank">每日三退声明精选（2019/07/03）</a><br></h3>我是一名机关干部，经历过1989年的64事件，那时我是一名在校大学生，三十年过去了，虽然中共邪党骗人的手段有变化，但是愚弄人的实质没有变，我相信善恶有报，在此，我声明退出中共邪党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月04日 11:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/3/n11360910.md#1" target="_blank">每日三退声明精选（2019/07/02）</a><br></h3>学生时代接受洗脑教育，随流加入少先队和共青团，参加工作后，受单位引诱加入共产党。随着年龄和学识的增长，乃知共产党是与自由、民主、文明、宪政等普世价值水火不融的，是一个虚伪邪恶的组织，是中国人民苦难的根源，是必须彻底铲除的毒瘤。今天中共正在大庆建党98周年，我却选择这一天郑重声明：退出共产党、共青团、少先队，彻底划清界限！彻底自新！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月03日 11:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/7/2/n11358715.md#1" target="_blank">每日三退声明精选（2019/07/01）</a><br></h3>我是一名中共党员，特别在文化大革命后认识了中共本质。我很后悔参加了这样一个组织。中共数十年来好话说尽，坏事做绝。完全成为一个邪恶的的组织。把人民和老百姓当作敌人。处处坑害人民，贪污腐败成风，国家完全被利益集团左右。在中国，没有自由，没有平等，没有法制，在互联网上构筑了一个无比恐怖的墙。只许听谎言，不准说真话。我坚决退出共产党组织，从灵魂上与魔鬼划清界线。为中.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月02日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fxikhp286/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/fxikhp286/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
